# python-project-49

./: README.md  demo.cast  demo1.cast  demo2.cast  demo3.cast  demo4.cast  pyproject.toml
brain_games/: cli.py  engine.py  game_constants.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  general_module.py
brain_games/scripts/: brain_even.py  brain_games.py  calc_script.py  even_script.py  gcd_script.py  prime_script.py  progression_script.py
